--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-midnight
 title: Leadership Scientific Software (LSSw)
+description: A portal for leadership scientific software discussions
