--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+remote_theme: chrisrhymes/bulma-clean-theme
 title: Leadership Scientific Software (LSSw)
 description: A portal for leadership scientific software discussions
